[package]
name = "crypto_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = {version ="*", features = ["tls"]}
url = "2.3.1"
env_logger = "0.10.0"
futures = "*"
futures-util = "*"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.96"