[package]
name = "crypto_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"




[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
prost = "0.11.9"
tokio-tungstenite = { version = "*", features = ["tls"] }
url = "2.3.1"
futures = "*"
futures-util = "*"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.96"
async-stream = "0.3.5"
futures-core = "0.3.28"
indicatif = "0.16.2"

[build-dependencies]
tonic-build = "0.9.2"
